--- a/main.html
+++ b/main.html
@@ -5,9 +5,11 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
-<body>
-	<!-- the entire body must be written by student -->
+<body><ol type="1">
+<li><p class="questions"><blockquote>Who was the first female to become the governor of an Indian state?</blockquote></p></li>
+<li><p class="questions"><blockquote>Who among first Woman to climb Mount Everest twice?</blockquote></p></li>
+<li><p class="questions"><blockquote>Who is President of India?</blockquote></p></li>
+	<!-- the entire body must be written by student --></ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
