done with the questiomns
updated block quotes first and then p it will come into the line

--- a/main.html
+++ b/main.html
@@ -5,13 +5,12 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-<body><ol type="1">
-<li><p class="questions"><blockquote>Who was the first female to become the governor of an Indian state?</blockquote></p></li>
-<li><p class="questions"><blockquote>Who among first Woman to climb Mount Everest twice?</blockquote></p></li>
-<li><p class="questions"><blockquote>Who is President of India?</blockquote></p></li>
-	<!-- the entire body must be written by student --></ol>
-    <script type="text/javascript" src="./script.js">
-</script>
+<body>
+	<blockquote><p class="questions">1.Who was the first female to become the governor of an Indian state?</p></blockquote>
+	<blockquote><p class="questions">2.Who among first Woman to climb Mount Everest twice?</p></blockquote>
+	<blockquote><p class="questions">3.Who is President of India?</p></blockquote>
+     <script type="text/javascript" src="./script.js">
+     </script>
 
 </body>
 
