--- a/main.html
+++ b/main.html
@@ -6,9 +6,9 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<blockquote><p class="questions">1.Who was the first female to become the governor of an Indian state?</p></blockquote>
-	<blockquote><p class="questions">2.Who among first Woman to climb Mount Everest twice?</p></blockquote>
-	<blockquote><p class="questions">3.Who is President of India?</p></blockquote>
+	<blockquote class="questions"><p>Who was the first female to become the governor of an Indian state?</p></blockquote>
+	<blockquote class="questions"><p>Who among first Woman to climb Mount Everest twice?</p></blockquote>
+	<blockquote class="questions"><p>Who is President of India?</p></blockquote>
      <script type="text/javascript" src="./script.js">
      </script>
 
